// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main container Main container with header 1`] = `
.c0 {
  margin-left: 190px;
  padding-top: 48px;
  padding-bottom: 14px;
  padding-left: 14px;
  padding-right: 0;
  background-color: #fff;
}

.c1 {
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 204px;
  padding-right: 14px;
  width: 100%;
  height: 96px;
  background-color: #fff;
  top: 48px;
}

.c4 {
  padding-top: 96px;
  padding-right: 14px;
}

.c2 {
  position: absolute;
  top: 48px;
  left: 0;
}

.c3 {
  position: fixed;
  z-index: 50;
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .c5 {
    display: none;
  }
}

@media screen and (min-width:1024px) and (max-width:1279px) {
  .c5 {
    display: none;
  }
}

@media screen and (min-width:1280px) {
  .c5 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2 c3"
    height={96}
    width={1}
  >
    <div />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5"
    />
    <div />
  </div>
</div>
`;

exports[`Main container Main container with sidebar 1`] = `
.c0 {
  margin-left: 190px;
  padding-top: 48px;
  padding-bottom: 14px;
  padding-left: 14px;
  padding-right: 0;
  background-color: #fff;
}

.c2 {
  padding-top: 62px;
  padding-left: 14px;
  padding-right: 14px;
  width: 240px;
  height: 100%;
  top: 0;
}

.c5 {
  padding-top: 14px;
  padding-right: 240px;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
}

.c4 {
  overflow-y: auto;
  position: fixed;
  z-index: 45;
}

@media screen and (max-width:511px) {
  .c1 {
    display: none;
  }
}

@media screen and (min-width:512px) and (max-width:639px) {
  .c1 {
    display: none;
  }
}

@media screen and (min-width:640px) and (max-width:767px) {
  .c1 {
    display: none;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .c6 {
    display: none;
  }
}

@media screen and (min-width:1024px) and (max-width:1279px) {
  .c6 {
    display: none;
  }
}

@media screen and (min-width:1280px) {
  .c6 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3 c4"
      data-tag="sidebar"
      height="100%"
      width={240}
    >
      <div />
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <div />
    </div>
    <div />
  </div>
</div>
`;

exports[`Main container Only main container 1`] = `
.c0 {
  margin-left: 190px;
  padding-top: 48px;
  padding-bottom: 14px;
  padding-left: 14px;
  padding-right: 0;
  background-color: #fff;
}

.c1 {
  padding-top: 14px;
  padding-right: 14px;
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .c2 {
    display: none;
  }
}

@media screen and (min-width:1024px) and (max-width:1279px) {
  .c2 {
    display: none;
  }
}

@media screen and (min-width:1280px) {
  .c2 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div />
  </div>
</div>
`;
